Use new modulepath property of JUnit Platform Gradle Plugin